  * apport/crashdb_impl/launchpad.py, upload(): Pass upload progress callback
    handler to launchpadBugs.storeblob.upload(), which supports this since
    version 0.2~39. Bump dependency to it accordingly.
  * apport/ui.py, file_report(): Define an upload progress callback handler,
    pass it to the crashdb upload(), and feed ui_set_upload_progress() with
    some actual data. (LP: #91521)

 -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 30 Jul 2007 13:44:04 +0200

apport (0.93) gutsy; urgency=low

  * apport/crashdb.py: Set sqlite connect timeout to two hours, instead of the
    default 5 seconds. Previously, one retracer always crashed when the other
    was consolidating the database.
  * bin/dupdb-admin, command_dump(): Correctly interpret empty version strings
    as 'fixed in unknown verrsion', not 'unfixed'.
  * apport/crashdb_impl/launchpad.py: Fix typo in bug comment string.
  * apport/crashdb_impl/launchpad.py: Add function get_source_info() which
    parses out release, version, and component from
    https://launchpad.net/$DISTRO/+source/$PACKAGE.
  * apport/crashdb_impl/launchpad.py, get_fixed_version(): If a bug is fixed,
    return the current version (as approximation of the version where the bug
    was fixed), instead of an empty string (which meant 'fixed in unknown
    version'). [apport-crash-duplicates spec]

 -- Martin Pitt <martin.pitt@ubuntu.com>  Wed, 25 Jul 2007 17:04:27 +0200

apport (0.92) gutsy; urgency=low

  * bin/crash-digger: Do not crash if duplicate db is locked when attempting
    to consolidate it. This happens often because in the DC we have two
    parallel instances (for amd64 and i386).
  * Move ubuntu-fat-chroot from bin/ to debian/local/, since it is so heavily
    Ubuntu specific.
  * debian/local/ubuntu-fat-chroot: Use diversions for the binaries we want to
    disable, so that chroot upgrades do not trash the modifications.
  * debian/local/setup-apport-retracer: launchpad-crash-digger ->
    crash-digger.