@@ -30,8 +30,10 @@ apport (0.94) UNRELEASED; urgency=low
   * apport/ui.py, file_report(): Define an upload progress callback handler,
     pass it to the crashdb upload(), and feed ui_set_upload_progress() with
     some actual data. (LP: #91521)
+  * problem_report.py: Remove support for reading bz2 compressed binary data.
+    That was only relevant during edgy's development cycle.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 30 Jul 2007 13:44:04 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Mon, 30 Jul 2007 16:30:24 +0200
 
 apport (0.93) gutsy; urgency=low
 
